# vector-fleet

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: vector_fleet_solver.py
src/vector_fleet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
